--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "mysql": "^2.16.0",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
+  },
+  "engines": {
+    "node": "8.9.4"
   }
 }
