--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "passport-google-oauth20": "^1.0.0"
   },
   "engines": {
-    "node": "8.9.4"
+    "node": "8.9.4",
+    "npm": "5.6.0"
   }
 }
